--- a/views/error.pug
+++ b/views/error.pug
@@ -2,6 +2,11 @@
 
 html 
     include ../header.html
-    body(style={background: 'red'})
-footer 
-    include ../footer.html
+    body(style={background: '#e3867f'})
+        .container
+            div(class='d-flex flex-column min-vh-100 justify-content-center align-items-center')
+                    h1(style={color: 'white'})= '404 PAGE NOT FOUND'
+
+// footer 
+//     include ../footer.html
+    
