--- a/views/error.pug
+++ b/views/error.pug
@@ -5,7 +5,7 @@ html
     body(style={background: '#e3867f'})
         .container
             div(class='d-flex flex-column min-vh-100 justify-content-center align-items-center')
-                    h1(style={color: 'white'})= '404 PAGE NOT FOUND'
+                    h1(style={color: 'white'})= 'PAGE NOT FOUND'
 
 // footer 
 //     include ../footer.html
