--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,8 @@
 //  ERROR PAGE
 
 html 
-    include ../header.html
+    head
+        include ../header.html
     body(style={background: '#e3867f'})
         .container
             div(class='d-flex flex-column min-vh-100 justify-content-center align-items-center')
