--- a/views/reservations.pug
+++ b/views/reservations.pug
@@ -1,8 +1,9 @@
 //  RESERVATIONS PAGE USING PUG
 //  NOTE: BE CAREFUL OF SPACING ISSUES WITH PUG
 
-html 
-    include ../header.html
+html
+    head
+        include ../header.html
     body(style={background: '#bababa'})
         .container
             ul(class='list-group mt-1')
@@ -11,5 +12,5 @@ html
                         h5= `Tutor: ${reservation.tutor}`
                         h5= `Student: ${reservation.student}`
                         p= reservation.subject
-footer
-    include ../footer.html
+    footer
+        include footer
