--- a/views/profile.pug
+++ b/views/profile.pug
@@ -5,6 +5,9 @@ html
     head 
         include ../header.html 
     body(style={background: '#bababa'})
+        .container
+            div(class='d-block h-auto w-auto mt-5' style={background: 'white'})
+                h1(class='py-3 ps-3') #{user.nickname}
 
     footer 
         include footer 
