--- a/views/newRes.pug
+++ b/views/newRes.pug
@@ -11,14 +11,14 @@ html
             div.form-group
                 //- implement a dropdown instead with Math, Science, Social Studies, English, etc.
                 label(for='subject') Subject(s):
-                input#subject.form-control(type='text' placeholder='preferred subject(s) to teach' name='subject')
+                input#subject.form-control(type='text' placeholder='Subject' name='subject')
             div.form-group
                 label(for='date') Date:
                 input#date.form-control(type='date' placeholder='preferred date' name='date')
             div.form-group
                 label(for='time') Time:
                 input#time.form-control(type='time' placeholder='preferred time' name='time')
-            button.btn.btn-primary(type='submit') Done 
+            button.btn.btn-primary(type='submit') Sign Up
 
 footer
     include ../footer.html
