--- a/views/index.pug
+++ b/views/index.pug
@@ -13,12 +13,12 @@ html
                 button(type='button' data-bs-target='#homeCarousel' data-bs-slide-to='1' aria-label='Slide 2')
             div(class='carousel-inner')
                 div(class='carousel-item active' data-bs-interval='5000')
-                    img(src='/grayBg.png' class='d-block' style='width: 100vw; height: 95vh' alt='First Slide')
+                    img(src='/stock photo 1.jpg' class='d-block' style='width: 100vw; height: 95vh' alt='First Slide')
                     div(class='carousel-caption')
-                        h1= 'Welcome!'
+                        h1= ''
                 div(class='carousel-item' data-bs-interval='5000')
-                    img(src='/orangeBg.png' class='d-block' style='width: 100vw; height: 95vh' alt='Second Slide')
+                    img(src='/stock photo 2.jpg' class='d-block' style='width: 100vw; height: 95%' alt='Second Slide')
                     div(class='carousel-caption')
-                        h1= 'Welcome!'
+                        h1= ''
     footer 
         include footer
