--- a/views/tutorSignup.pug
+++ b/views/tutorSignup.pug
@@ -7,7 +7,7 @@ html
         .tutorSignupContainer {
             background-color: white;
             text-align: center;
-            margin: 10;
+            margin: 25;
         }
 
     body(style={background: '#bababa'})
@@ -39,7 +39,7 @@ html
                             option(value='Sciences') Sciences
                             option(value='History and Social Studies') History and Social Studies
                             option(value='English') English
-                            option(value='Computer Programming') Computer Programming
+                            option(value='Computer Sciences and Engineering') Computer Sciences and Engineering
                             option(value='Arts') Arts
                 div.form-group.m-3
                     label.control-label.requiredField(for='specialities') Specialites within subject:
