--- a/views/newRes.pug
+++ b/views/newRes.pug
@@ -2,23 +2,32 @@
 
 html 
     include ../header.html
+    style.
+        .newResContainer {
+            background-color: white  ;
+            margin-left : 50px;
+            width: 500px;
+            height:300px;
+            align: center;
+        }
     body(style={background: '#bababa'})
         .container
         form(method='POST' action='/newRes')
-            div.form-group
-                label(for='tutor') Tutor:
-                input#name.form-control(type='text' placeholder='first and last' name='tutor')
-            div.form-group
-                //- implement a dropdown instead with Math, Science, Social Studies, English, etc.
-                label(for='subject') Subject(s):
-                input#subject.form-control(type='text' placeholder='Subject' name='subject')
-            div.form-group
-                label(for='date') Date:
-                input#date.form-control(type='date' placeholder='preferred date' name='date')
-            div.form-group
-                label(for='time') Time:
-                input#time.form-control(type='time' placeholder='preferred time' name='time')
-            button.btn.btn-primary(type='submit') Sign Up
+            div(class = 'd-flex flex-column newResContainer border border-primary rounded')
+                div.form-group
+                    label(for='tutor') Tutor:
+                    input#name.form-control(type='text' placeholder='first and last' name='tutor')
+                div.form-group
+                    //- implement a dropdown instead with Math, Science, Social Studies, English, etc.
+                    label(for='subject') Subject(s):
+                    input#subject.form-control(type='text' placeholder='Subject' name='subject')
+                div.form-group
+                    label(for='date') Date:
+                    input#date.form-control(type='date' placeholder='preferred date' name='date')
+                div.form-group
+                    label(for='time') Time:
+                    input#time.form-control(type='time' placeholder='preferred time' name='time')
+                button.btn.btn-primary(type='submit') Done 
 
 footer
     include footer
